style: Fix alignment of card contents

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,8 +41,7 @@ h1 {
 
 .input-container,
 .form-input,
-#new-book,
-.card {
+#new-book {
     display: flex;
 }
 
@@ -114,8 +113,17 @@ select,
     min-width: min-content;
     border: 5px double var(--light-color);
     border-radius: 20px;
+    
+    display: grid;
+    grid-template-areas:
+        "text close"
+        "text toggle";
     justify-content: space-between;
     align-items: baseline;
+}
+
+.info-container {
+    grid-area: text;
 }
 
 .delete-btn {
@@ -123,7 +131,8 @@ select,
     border: none;
     height: 30px;
     width: 30px;
-    order: 2;
+
+    grid-area: close;
 }
 
 .toggle-read {
@@ -132,6 +141,9 @@ select,
     border: none;
     height: 40px;
     width: 40px;
+
+    grid-area: toggle;
+    align-self: flex-end;
 }
 
 .not-read {
